--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </div><!-- Desktop Nav -->
       <div class="hidden md:flex items-center gap-8"><a href="#services" class="text-gray-300 hover:text-white transition-colors font-medium">Services</a> <a href="#why" class="text-gray-300 hover:text-white transition-colors font-medium">Why GoRyd</a> <a href="#captain" class="text-gray-300 hover:text-white transition-colors font-medium">Drive</a> <a href="#safety" class="text-gray-300 hover:text-white transition-colors font-medium">Safety</a>
       </div><!-- CTA Button -->
-      <div class="flex items-center gap-3"><button onclick="showWelcomeModal('Login', 'User login will be available soon. Download the app to access your account.')" class="hidden sm:block px-4 py-2 text-sm font-semibold text-white border border-white/20 rounded-full hover:bg-white/10 transition-all"> Login </button> <button onclick="showWelcomeModal('Download App', 'The GoRyd app is launching soon! We\'ll notify you when it\'s available on App Store and Google Play.')" class="btn-primary gradient-red px-4 py-2 sm:px-6 sm:py-2.5 rounded-full font-semibold text-sm sm:text-base hover:shadow-lg hover:shadow-red-500/30 transition-all"> Get App </button>
+      <div class="flex items-center gap-2 sm:gap-3"><button onclick="window.location.href='login.html'" class="px-3 py-2 sm:px-4 sm:py-2 text-xs sm:text-sm font-semibold text-white border border-white/20 rounded-full hover:bg-white/10 transition-all"> Login </button> <button onclick="showWelcomeModal('Download App', 'The GoRyd app is launching soon! We\'ll notify you when it\'s available on App Store and Google Play.')" class="btn-primary gradient-red px-4 py-2 sm:px-6 sm:py-2.5 rounded-full font-semibold text-sm sm:text-base hover:shadow-lg hover:shadow-red-500/30 transition-all"> Get App </button>
       </div><!-- Mobile Menu Button --> <button id="mobile-menu-btn" class="md:hidden p-2 text-white">
        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
        </svg></button>
@@ -1099,9 +1099,11 @@
         <li><a href="#" onclick="event.preventDefault(); showWelcomeModal('Privacy', 'Privacy policy will be published soon!')" class="hover:text-white transition-colors">Privacy</a></li>
        </ul>
        <div class="mt-4">
-        <h5 class="font-semibold text-sm mb-2 text-gray-300">Contact</h5><a href="mailto:slok358@gmail.com" class="text-red-400 hover:text-red-300 transition-colors text-sm flex items-center gap-2">
+        <h5 class="font-semibold text-sm mb-2 text-gray-300">Contact</h5><a href="mailto:slok358@gmail.com" class="text-red-400 hover:text-red-300 transition-colors text-sm flex items-center gap-2 mb-2">
          <svg class="w-4 h-4" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-         </svg> slok358@gmail.com </a>
+         </svg> slok358@gmail.com </a> <a href="tel:+917488494125" class="text-red-400 hover:text-red-300 transition-colors text-sm flex items-center gap-2">
+         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+         </svg> +91 7488494125 </a>
        </div>
       </div>
      </div><!-- Bottom Bar -->
@@ -1461,5 +1463,5 @@
       lastScroll = currentScroll;
     });
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c30b9ba6267f361',t:'MTc2OTI3MDIzNS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c9b49c522884f8f',t:'MTc3MDM4NzYyNi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
